k8s/api/3-3statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-standalone
  namespace: vaccineapi
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: backend-standalone
    spec:
      containers:
      - name: backend-standalone
        image: gcr.io/kubernetes-sd-323304/newvaccineback
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
