k8s/api/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drage
  namespace: vaccineapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drage
  template:
    metadata:
      labels:
        app: drage
    spec:
      containers:
      - name: drage
        image: gcr.io/kubernetes-sd-323304/newvaccineback
        ports:
        -name: http
          containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
