k8s/api/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaccineapi
  namespace: vaccineapi
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vaccineapi
