k8s/api/5-basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apibasic-ingress
  namespace: vaccineapi
spec:
  backend:
    serviceName: vaccineapi
    servicePort: 8080
